# rustacean

./: .gitignore  .markdownlint.json  AGENTS.md  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  MANIFEST.md  NOTICE  README.md  SECURITY.md  SUPPORT.md  rust-secretary.sh  scrape-rust-docs.sh
.codex-build/: deepen-template.txt  gen_gapfill.py  gen_newcoverage.py  gen_prompts.py  generate_readme_brand_images.py  run_domains.sh  run_set.sh  scrape-std.sh
.github/: PULL_REQUEST_TEMPLATE.md
.obsidian/: app.json
references/: adapter-manifest.json  adapter-plan.md  current-requirements.md  market-research.md  product-spec.md  research-plan.md  safety-gates.md  source-ledger.json  source-manifest-template.md  source-map.md
research/: 00-INDEX.md  01-idiomatic-api-design.md  02-ownership-borrowing-lifetimes.md  03-error-handling.md  04-async-rust.md  05-anti-patterns-footguns.md  06-unsafe-and-ffi.md  07-performance-optimization.md  08-concurrency.md  09-tooling-project-hygiene.md  10-dependency-supply-chain-security.md  99-rust-mastery-synthesis.md  sources.md
scripts/: check-rust-examples.py  check-wikilinks.py  run-rust-gate.sh  rust-examples-allow.txt
scripts/examples-check/: Cargo.toml
scripts/examples-check/src/: lib.rs
site/: quartz.config.ts  quartz.layout.ts
sources/: cargo-book.md  command-line-book.md  edition-guide.md  embedded-book.md  rust-by-example.md  rustc-book.md  rustdoc-book.md  rustonomicon.md  the-book.md  the-reference.md
specs/: rust-brain.yaml
wiki/: Coverage Backlog.md  Rust Brain Home.md  Wiki Map.canvas  hot.md  (+3 more)
(+659 files in other folders)
