[package]
name = "rustacean-examples-check"
version = "0.0.0"
edition = "2024"
publish = false

# Crates the brain's `rust` examples depend on, so the compile gate can build
# them. Heavy or one-off crates (criterion, axum, config, figment, reqwest,
# wasm-bindgen) are intentionally left out and those few examples are marked
# `no_run`/`ignore` in the gate manifest instead.
[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "2"
clap = { version = "4", features = ["derive"] }
itertools = "0.13"
rayon = "1"
regex = "1"
tracing = "0.1"
smallvec = "1"
quote = "1"
syn = { version = "2", features = ["full"] }
